--- a/taiwan.html
+++ b/taiwan.html
@@ -30,7 +30,7 @@
 
     .info-panel { background: linear-gradient(135deg, #fef3c7, #fde68a); }
 
-    /* ✅ 地圖白點（拖放目標） */
+    /* ✅ 地圖白點（純顯示，不再當 drop target） */
     .dot-target {
       width: 14px;
       height: 14px;
@@ -38,11 +38,7 @@
       background: white;
       border: 2px solid rgba(51,65,85,0.75);
       box-shadow: 0 2px 8px rgba(0,0,0,0.18);
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-    }
-    .dot-target.drag-over {
-      box-shadow: 0 0 18px rgba(34,197,94,0.65);
-      transform: translate(-50%, -50%) scale(1.15);
+      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
     }
 
     /* ✅ 左側標籤（整齊排列，不重疊） */
@@ -59,6 +55,18 @@
       transition: transform 0.15s ease, box-shadow 0.15s ease;
       user-select: none;
     }
+
+    /* ✅ 方框可拖入提示 */
+    .label-box.droppable {
+      cursor: pointer;
+    }
+    .label-box.drag-over {
+      transform: translateY(-1px) scale(1.01);
+      box-shadow: 0 0 18px rgba(34,197,94,0.35);
+      border-color: rgba(34,197,94,0.9);
+      background: rgba(236, 253, 245, 0.95);
+    }
+
     .label-box.matched {
       background: linear-gradient(135deg, #4ade80, #22c55e);
       color: white;
@@ -78,19 +86,17 @@
     <!-- Header -->
     <header class="text-center mb-4">
       <h1 id="game-title" class="text-2xl md:text-3xl font-bold text-blue-600 mb-2">🚂 台灣鐵路車站配對遊戲 🚃</h1>
-      <p id="instruction-text" class="text-gray-600 text-sm md:text-base">把右邊的車站名稱拖到左邊正確的位置吧！</p>
+      <p id="instruction-text" class="text-gray-600 text-sm md:text-base">把右邊的車站名稱拖到左邊正確的方框吧！</p>
     </header>
 
-    <!-- ✅ 左邊地圖加大：桌機時 left=2/3，右側卡片=1/3 -->
     <div class="flex flex-col lg:flex-row gap-4 max-w-7xl mx-auto">
 
-      <!-- Left: Map (bigger) -->
+      <!-- Left: Map -->
       <div class="lg:w-2/3 bg-white rounded-3xl shadow-xl p-4">
         <div class="flex items-center justify-center mb-3">
           <span class="text-lg font-bold text-slate-700">🗺️ 北迴線鐵路地圖</span>
         </div>
 
-        <!-- ✅ 地圖：增加左側標籤欄空間（在圖片容器內） -->
         <div class="relative w-full overflow-hidden rounded-3xl bg-slate-50">
 
           <img
@@ -100,7 +106,7 @@
             alt="rail map"
           />
 
-          <!-- ✅ 畫箭頭/連線的 SVG（不吃事件） -->
+          <!-- SVG 連線層 -->
           <svg id="links-layer"
                class="absolute inset-0 w-full h-full pointer-events-none"
                viewBox="0 0 100 100"
@@ -112,24 +118,24 @@
             </defs>
           </svg>
 
-          <!-- ✅ 地圖上的白點（拖放目標） -->
+          <!-- 地圖白點 -->
           <div id="stations-container" class="absolute inset-0"></div>
 
-          <!-- ✅ 左側整齊排列的標籤欄（放在地圖左側，不重疊） -->
+          <!-- 左側方框欄 -->
           <div id="labels-container"
                class="absolute top-2 bottom-2 left-2 flex flex-col justify-between gap-2 w-[170px] pointer-events-auto">
           </div>
         </div>
 
         <p class="text-xs text-slate-500 mt-2 text-center">
-          白點是拖曳目標；方框固定排在地圖左側，並以箭頭指向白點。
+          方框為配對目標（拖到方框）；箭頭指向地圖白點位置。
         </p>
       </div>
 
       <!-- Right Panel -->
       <div class="lg:w-1/3 flex flex-col gap-4">
 
-        <!-- Cards Area -->
+        <!-- Cards -->
         <div class="bg-white rounded-3xl shadow-xl p-4">
           <div class="flex items-center justify-between mb-3">
             <span class="text-lg font-bold text-orange-600">🎴 車站卡片</span>
@@ -154,7 +160,7 @@
           <div id="info-content" class="text-center">
             <div class="text-6xl mb-3">🚉</div>
             <p class="text-lg text-amber-800 font-medium">
-              點擊已配對的車站<br>來看看當地的特色吧！
+              點擊已配對的方框或白點<br>來看看當地的特色吧！
             </p>
           </div>
         </div>
@@ -166,10 +172,9 @@
   <script>
     const defaultConfig = {
       game_title: '🚂 台灣鐵路車站配對遊戲 🚃',
-      instruction_text: '把右邊的車站名稱拖到左邊正確的位置吧！'
+      instruction_text: '把右邊的車站名稱拖到左邊正確的方框吧！'
     };
 
-    // ✅ 新增：貢寮（放在雙溪與福隆之間）
     const stationsData = [
       {
         id: 'songshan',
@@ -290,8 +295,6 @@
           <ellipse cx="70" cy="87" rx="3" ry="1.5" fill="#4682B4"/>
         </svg>`
       },
-
-      /* ✅ 新增：貢寮 */
       {
         id: 'gongliao',
         name: '貢寮',
@@ -306,7 +309,6 @@
           <circle cx="30" cy="74" r="3" fill="white" opacity="0.9"/>
         </svg>`
       },
-
       {
         id: 'fulong',
         name: '福隆',
@@ -391,7 +393,7 @@
       }
     ];
 
-    // ✅ 白點座標（你原本的都保留，新增貢寮）
+    // ✅ 位置仍照你原本的（之後可微調以貼合新圖）
     const stationPositions = {
       songshan:    { left: 71.3921, top: 21.7455 },
       ruifang:     { left: 83.8485, top: 17.3941 },
@@ -399,10 +401,7 @@
       sandiaoling: { left: 87.3830, top: 21.1612 },
       mudan:       { left: 88.2622, top: 23.0625 },
       shuangxi:    { left: 91.0622, top: 23.2647 },
-
-      // ✅ 新增：貢寮（先用雙溪↔福隆中點，若要更準再微調）
       gongliao:    { left: 92.1568, top: 23.7006 },
-
       fulong:      { left: 93.2514, top: 24.1364 },
       yilan:       { left: 81.9706, top: 40.8866 },
       suao:        { left: 88.0022, top: 51.8680 },
@@ -413,6 +412,9 @@
     let currentCards = [];
     let draggedCard = null;
 
+    // touch
+    let clonedCard = null;
+
     function shuffleArray(array) {
       const shuffled = [...array];
       for (let i = shuffled.length - 1; i > 0; i--) {
@@ -420,15 +422,6 @@
         [shuffled[i], shuffled[j]] = [shuffled[j], shuffled[i]];
       }
       return shuffled;
-    }
-
-    // ✅ 白點 drag-over 效果（不讓方框跟著變形）
-    function handleDragOverDot(e) {
-      e.preventDefault();
-      e.currentTarget.classList.add('drag-over');
-    }
-    function handleDragLeaveDot(e) {
-      e.currentTarget.classList.remove('drag-over');
     }
 
     function renderStations() {
@@ -446,9 +439,7 @@
 
       const n = stationsData.length;
 
-      // ✅ 左側標籤欄連線終點 X（百分比 viewBox）
-      // 線從白點(右側)指向左側標籤，所以 x2 要小
-      const labelAnchorX = 22;
+      const labelAnchorX = 22; // label 線端點
       const topY = 8;
       const bottomY = 92;
 
@@ -457,7 +448,7 @@
         const pos = stationPositions[station.id];
         if (!pos) return;
 
-        // 1) 白點
+        // 1) 白點（只顯示 + 點擊看資訊）
         const dot = document.createElement('div');
         dot.className = 'absolute dot-target';
         dot.dataset.stationId = station.id;
@@ -468,46 +459,45 @@
         if (isMatched) {
           dot.style.background = 'linear-gradient(135deg, #4ade80, #22c55e)';
           dot.style.border = '2px solid rgba(16,185,129,0.95)';
-          dot.addEventListener('click', () => showStationInfo(station));
-        } else {
-          dot.addEventListener('dragover', handleDragOverDot);
-          dot.addEventListener('dragleave', handleDragLeaveDot);
-          dot.addEventListener('drop', handleDrop);
         }
+        dot.addEventListener('click', () => {
+          if (matchedStations.has(station.id)) showStationInfo(station);
+        });
         dotLayer.appendChild(dot);
 
-        // 2) 左側標籤：依序由上往下均分排列
-        const labelY = (n === 1)
-          ? 50
-          : topY + (index * (bottomY - topY) / (n - 1));
+        // 2) 方框（drop target）
+        const labelY = (n === 1) ? 50 : topY + (index * (bottomY - topY) / (n - 1));
 
         const label = document.createElement('div');
-        label.className = 'label-box';
+        label.className = 'label-box droppable';
         label.dataset.stationId = station.id;
+
         label.innerHTML = `
           <div class="flex items-center gap-2">
             <span class="w-5 text-right">${index + 1}</span>
-            <span class="flex-1">${isMatched ? station.name : '？？？'}</span>
-            ${isMatched ? '<span>✓</span>' : ''}
+            <span class="flex-1">${isMatched ? station.name : '（拖到這裡）'}</span>
+            ${isMatched ? '<span>✓</span>' : '<span class="opacity-60">⬅️</span>'}
           </div>
         `;
 
         if (isMatched) {
           label.classList.add('matched');
           label.addEventListener('click', () => showStationInfo(station));
+        } else {
+          label.addEventListener('dragover', handleDragOverLabel);
+          label.addEventListener('dragleave', handleDragLeaveLabel);
+          label.addEventListener('drop', handleDropOnLabel);
         }
 
         labelsLayer.appendChild(label);
 
-        // 3) 連線箭頭：label -> dot（箭頭頭在白點那邊更直覺）
+        // 3) 箭頭連線：label -> dot
         const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-
         const x1 = labelAnchorX;
         const y1 = labelY;
         const x2 = pos.left;
         const y2 = pos.top;
 
-        // 控制點：讓線略微彎曲
         const cx1 = x1 + 10;
         const cy1 = y1;
         const cx2 = x2 - 10;
@@ -541,7 +531,7 @@
           // Touch events for mobile
           card.addEventListener('touchstart', handleTouchStart, { passive: false });
           card.addEventListener('touchmove', handleTouchMove, { passive: false });
-          card.addEventListener('touchend', handleTouchEnd);
+          card.addEventListener('touchend', handleTouchEnd, { passive: false });
 
           container.appendChild(card);
         }
@@ -562,22 +552,29 @@
     function handleDragEnd(e) {
       e.target.classList.remove('dragging');
       draggedCard = null;
-      document.querySelectorAll('.dot-target').forEach(dot => dot.classList.remove('drag-over'));
+      document.querySelectorAll('.label-box').forEach(lb => lb.classList.remove('drag-over'));
     }
 
-    function handleDrop(e) {
+    function handleDragOverLabel(e) {
+      e.preventDefault();
+      e.currentTarget.classList.add('drag-over');
+    }
+
+    function handleDragLeaveLabel(e) {
+      e.currentTarget.classList.remove('drag-over');
+    }
+
+    function handleDropOnLabel(e) {
       e.preventDefault();
       e.currentTarget.classList.remove('drag-over');
 
       const cardId = e.dataTransfer.getData('text/plain');
-      const spotId = e.currentTarget.dataset.stationId;
+      const targetId = e.currentTarget.dataset.stationId;
 
-      if (cardId === spotId) matchStation(cardId);
+      if (cardId === targetId) matchStation(cardId);
     }
 
-    // Touch handling for mobile
-    let clonedCard = null;
-
+    // Touch handling (mobile)：拖到方框才算
     function handleTouchStart(e) {
       e.preventDefault();
       const touch = e.touches[0];
@@ -602,24 +599,31 @@
       updateClonedCardPosition(touch.clientX, touch.clientY);
 
       const elemBelow = document.elementFromPoint(touch.clientX, touch.clientY);
-      const dot = elemBelow?.closest('.dot-target');
+      const label = elemBelow?.closest('.label-box');
 
-      document.querySelectorAll('.dot-target').forEach(d => d.classList.remove('drag-over'));
-      if (dot && !matchedStations.has(dot.dataset.stationId)) dot.classList.add('drag-over');
+      document.querySelectorAll('.label-box').forEach(lb => lb.classList.remove('drag-over'));
+      if (label && !matchedStations.has(label.dataset.stationId)) {
+        label.classList.add('drag-over');
+      }
     }
 
     function handleTouchEnd(e) {
+      e.preventDefault();
       if (!clonedCard || !draggedCard) return;
 
       const touch = e.changedTouches[0];
       const elemBelow = document.elementFromPoint(touch.clientX, touch.clientY);
-      const dot = elemBelow?.closest('.dot-target');
+      const label = elemBelow?.closest('.label-box');
 
-      if (dot && dot.dataset.stationId === draggedCard.dataset.stationId) {
-        matchStation(draggedCard.dataset.stationId);
+      if (label) {
+        const targetId = label.dataset.stationId;
+        const cardId = draggedCard.dataset.stationId;
+        if (!matchedStations.has(targetId) && cardId === targetId) {
+          matchStation(cardId);
+        }
       }
 
-      document.querySelectorAll('.dot-target').forEach(d => d.classList.remove('drag-over'));
+      document.querySelectorAll('.label-box').forEach(lb => lb.classList.remove('drag-over'));
       clonedCard.remove();
       clonedCard = null;
       draggedCard = null;
@@ -673,7 +677,7 @@
       document.getElementById('info-content').innerHTML = `
         <div class="text-6xl mb-3">🚉</div>
         <p class="text-lg text-amber-800 font-medium">
-          點擊已配對的車站<br>來看看當地的特色吧！
+          點擊已配對的方框或白點<br>來看看當地的特色吧！
         </p>
       `;
     }
@@ -701,7 +705,7 @@
       window.elementSdk.init({ defaultConfig, onConfigChange, mapToCapabilities, mapToEditPanelValues });
     }
 
-    // ✅ 等圖片載入後再初始化（避免初次計算閃動）
+    // ✅ 等圖片載入後再初始化
     const mapImg = document.getElementById('rail-map');
     if (mapImg && !mapImg.complete) {
       mapImg.addEventListener('load', resetGame, { once: true });
